--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
+title: KIP Lifecycle
+description: Exposing he complexity of Modern Processes
+show_downloads: true
+google_analytics: true
 theme: jekyll-theme-leap-day
