Set theme jekyll-theme-leap-day

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: KIP Lifecycle
 description: Exposing the complexity of Modern Processes
 show_downloads: true
 google_analytics: true
-theme: jekyll-theme-cayman
+theme: jekyll-theme-leap-day
